# NagarroLearningProgram

./: README.md
H1/: CMakeLists.txt  main.cc
H1/include/: first_test_header.h
H1/src/: first_test_header.cc  second_test_header.cc
H2/: CMakeLists.txt  main.cc  store.xml  storeSave.xml  storeTest.xml
H2/include/: Product.h  ProductManager.h  XMLHandler.h
H2/src/: Product.cc  ProductManager.cc  XMLHandler.cc
H3/FileHandler/: CMakeLists.txt  main.cc
H3/Pointers/: CMakeLists.txt  main.cc
H4/: CMakeLists.txt  main.cc
H4/include/: printer.h  store.h
H4/include/Client/: client.h  premium_client.h  regular_client.h  under_age_client.h
H4/include/Product/: product.h
H4/include/Product/Drink/: alcoholic.h  beverage.h
H4/include/Product/Food/: food.h
H4/src/: printer.cc  store.cc
H4/src/Client/: client.cc  premium_client.cc  regular_client.cc  under_age_client.cc
H5/: CMakeLists.txt  main.cc
H5/include/: printer.h  store.h
H5/src/: printer.cc  store.cc
H6/: CMakeLists.txt  main.cc
H6/data/: out_file.txt
H6/include/: customers_header.h  printers_header.h  products_header.h  shared.hpp  store.h  unique.hpp
H6/include/customer/: affiliate_customer.h  customer.h  premium_customer.h  underage_customer.h
H6/include/printer/: console_printer.h  file_handler.h  file_printer.h  logger.h  printable.h  printer.h
H6/include/product/: alcoholic.h  book.h  product.h  toy.h
H6/src/: store.cc
H6/src/customer/: affiliate_customer.cc  customer.cc  premium_customer.cc  underage_customer.cc
H6/src/printer/: file_handler.cc  file_printer.cc
H6/src/product/: alcoholic.cc  book.cc  product.cc  toy.cc
H6/tests/: customer_tests.cc  printer_tests.cc  product_tests.cc  shared_pointer_tests.cc  store_tests.cc  unique_pointer_tests.cc
H7/: CMakeLists.txt  main.cc
H7/include/: food.h
H7/src/: client.cc  dish.cc  restaurant.cc
H8/: CMakeLists.txt  client_main.cc  server_main.cc
H8/include/: client.h  (+1 more)
H9/: CMakeLists.txt  GrepCount.sh  client_main.cc  logs.txt  server_main.cc
H9/include/: client.h  message.h  server.h
H9/src/: client.cc  server.cc
(+25 files in other folders)
